slow-test.yml -> ci-main-long.yml & slow_test -> long_test

--- a/.github/workflows-source/release-testing.yml
+++ b/.github/workflows-source/release-testing.yml
@@ -76,9 +76,9 @@ jobs:
     uses: ./.github/workflows/ci-main.yml
     secrets: inherit
 
-  slow-tests:
-    name: Slow Tests
-    uses: ./.github/workflows/slow-tests.yml
+  ci-main-long:
+    name: CI Main Long
+    uses: ./.github/workflows/ci-main-long.yml
     secrets: inherit
 
   bazel-system-test-nightly:
