--- a/Cargo.toml
+++ b/Cargo.toml
@@ -363,6 +363,8 @@ members = [
     "rs/tests/consensus/utils",
     "rs/tests/driver",
     "rs/tests/execution",
+    "rs/tests/message_routing",
+    "rs/tests/message_routing/rejoin_test_lib",
     "rs/tests/httpbin-rs",
     "rs/tests/networking",
     "rs/tests/networking/canisters",
