--- a/rs/nns/governance/BUILD.bazel
+++ b/rs/nns/governance/BUILD.bazel
@@ -332,10 +332,10 @@ rust_bench(
     ],
 )
 
-# all TLA modules
+# all TLA models
 # NOTE: the test runner assumes unique basenames
 filegroup(
-    name = "tla_modules",
+    name = "tla_models",
     srcs = glob(["tla/*.tla"]),
 )
 
@@ -354,7 +354,7 @@ rust_test_suite_with_extra_srcs(
     crate_features = test_with_tla(),
     data = [
         "tests/neurons.csv",
-        ":tla_modules",
+        ":tla_models",
         "@bazel_tools//tools/jdk:current_java_runtime",
         "@tla_apalache//:bin/apalache-mc",
     ],
@@ -362,7 +362,7 @@ rust_test_suite_with_extra_srcs(
         "NEURON_CSV_PATH": "rs/nns/governance/tests/neurons.csv",
         "JAVABASE": "$(JAVABASE)",
         "TLA_APALACHE_BIN": "$(rootpath @tla_apalache//:bin/apalache-mc)",
-        "TLA_MODULES": "$(locations :tla_modules)",
+        "TLA_MODULES": "$(locations :tla_models)",
     },
     extra_srcs = glob([
         "tests/*/*.rs",
