--- a/packages/pocket-ic/BUILD.bazel
+++ b/packages/pocket-ic/BUILD.bazel
@@ -46,38 +46,17 @@ rust_library(
     deps = DEPENDENCIES,
 )
 
-rust_canister(
-    name = "test_canister",
-    srcs = ["tests/test_canister.rs"],
-    service_file = ":tests/test_canister.did",
-    deps = [
-        # Keep sorted.
-        "@crate_index//:candid",
-        "@crate_index//:ic-cdk",
-        "@crate_index//:serde",
-        "@crate_index//:serde_bytes",
-    ],
-)
-
-rust_test(
-    name = "test_canister_unit_test",
-    crate = ":_wasm_test_canister",
-    data = ["tests/test_canister.did"],
-    env = {"CARGO_MANIFEST_DIR": "packages/pocket-ic"},
-    deps = [":pocket-ic"] + DEPENDENCIES + TEST_DEPENDENCIES,
-)
-
 rust_test_suite(
     name = "test",
     size = "medium",
     srcs = ["tests/tests.rs"],
     data = [
-        ":test_canister.wasm",
+        "//packages/pocket-ic/test_canister:test_canister.wasm",
         "//rs/pocket_ic_server:pocket-ic-server",
     ],
     env = {
         "POCKET_IC_BIN": "$(rootpath //rs/pocket_ic_server:pocket-ic-server)",
-        "TEST_WASM": "$(rootpath :test_canister.wasm)",
+        "TEST_WASM": "$(rootpath //packages/pocket-ic/test_canister:test_canister.wasm)",
     },
     flaky = False,
     proc_macro_deps = MACRO_DEPENDENCIES,
