--- a/.github/workflows/pocket-ic-build-windows.yml
+++ b/.github/workflows/pocket-ic-build-windows.yml
@@ -19,11 +19,7 @@ jobs:
         uses: moonrepo/setup-rust@v1.2.1
       - name: 'cargo clippy'
         run: |
-          cargo clippy --locked --all-features -p pocket-ic --all-targets -- \
-            -D warnings \
-            -D clippy::all \
-            -D clippy::mem_forget \
-            -C debug-assertions=off
+          cargo clippy --locked --all-features -p pocket-ic --all-targets -- -D warnings -D clippy::all -D clippy::mem_forget -C debug-assertions=off
       - name: 'cargo build'
         shell: pwsh
         run: |
