chore(crypto): CRP-2606 move crypto system tests out of `rs/tests:tests` (#2087)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -361,6 +361,7 @@ members = [
     "rs/tests/consensus/tecdsa",
     "rs/tests/consensus/upgrade",
     "rs/tests/consensus/utils",
+    "rs/tests/crypto",
     "rs/tests/driver",
     "rs/tests/execution",
     "rs/tests/message_routing",
