--- a/Cargo.toml
+++ b/Cargo.toml
@@ -608,6 +608,7 @@ pprof = { version = "0.13.0", default-features = false, features = [
     "prost-codec",
 ] }
 pretty_assertions = "1.4.0"
+proc-macro2 = "1.0.88"
 prometheus = { version = "0.13.4", features = ["process"] }
 prometheus-parse = { version = "0.2.4" }
 proptest = "1.5.0"
@@ -615,6 +616,7 @@ proptest-derive = "0.5.0"
 prost = "0.13.3"
 prost-build = "0.13.3"
 protobuf = "2.28.0"
+quote = "1.0.37"
 quinn = { version = "0.11.5", default-features = false, features = [
     "ring",
     "log",
