--- a/rs/crypto/internal/crypto_lib/threshold_sig/canister_threshold_sig/fe-derive/Cargo.toml
+++ b/rs/crypto/internal/crypto_lib/threshold_sig/canister_threshold_sig/fe-derive/Cargo.toml
@@ -13,6 +13,6 @@ proc-macro = true
 hex = { workspace = true }
 num-bigint-dig = { version = "0.8", features = ["prime"] }
 num-traits = { workspace = true }
-proc-macro2 = "1.0"
-quote = "1.0"
+proc-macro2 = { workspace = true }
+quote = { workspace = true }
 syn = { workspace = true }
