--- a/rs/nns/test_utils_macros/Cargo.toml
+++ b/rs/nns/test_utils_macros/Cargo.toml
@@ -10,6 +10,6 @@ documentation.workspace = true
 proc-macro = true
 
 [dependencies]
-quote = "1.0"
+quote = { workspace = true }
 syn = { workspace = true }
 
