--- a/rs/registry/admin-derive/Cargo.toml
+++ b/rs/registry/admin-derive/Cargo.toml
@@ -10,5 +10,5 @@ documentation.workspace = true
 proc-macro = true
 
 [dependencies]
-quote = "1.0"
+quote = { workspace = true }
 syn = { workspace = true }
