--- a/rs/tla_instrumentation/tla_instrumentation_proc_macros/Cargo.toml
+++ b/rs/tla_instrumentation/tla_instrumentation_proc_macros/Cargo.toml
@@ -10,5 +10,5 @@ proc-macro = true
 
 [dependencies]
 syn = { workspace = true }
-quote = "1.0"
-proc-macro2 = "1.0"
+quote = { workspace = true }
+proc-macro2 = { workspace = true }
