--- a/rs/utils/validate_eq_derive/Cargo.toml
+++ b/rs/utils/validate_eq_derive/Cargo.toml
@@ -9,7 +9,7 @@ proc-macro = true
 
 [dependencies]
 darling = "0.20.10"
-proc-macro2 = "1.0.86"
-quote = "1.0.36"
-syn = "1.0.109"
+proc-macro2 = { workspace = true }
+quote = { workspace = true }
+syn = { workspace = true }
 
