--- a/.github/workflows/pocket-ic-build-windows.yml
+++ b/.github/workflows/pocket-ic-build-windows.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/checkout@v4
       - name: 'Setup Rust and Cargo'
         uses: moonrepo/setup-rust@v1.2.1
+        with:
+          components: clippy
       - name: 'cargo clippy'
         run: |
           cargo clippy --locked --all-features -p pocket-ic -p pocket-ic-test-canister --all-targets -- -D warnings -D clippy::all -D clippy::mem_forget -C debug-assertions=off
