--- a/rs/tests/sdk/BUILD.bazel
+++ b/rs/tests/sdk/BUILD.bazel
@@ -52,6 +52,9 @@ system_test_nns(
 
 system_test(
     name = "dfx_check_old_wallet_version_test",
+    env = {
+        "WALLET_CANISTER_0_7_2_WASM": "$(rootpath @wallet_canister_0.7.2//file)",
+    },
     flaky = True,
     target_compatible_with = ["@platforms//os:linux"],  # requires libssh that does not build on Mac OS
     runtime_deps = RUNTIME_DEPS + [
