--- a/rs/tla_instrumentation/BUILD.bazel
+++ b/rs/tla_instrumentation/BUILD.bazel
@@ -29,10 +29,12 @@ rust_test(
     data = [
         ":tla_models",
         "@bazel_tools//tools/jdk:current_java_runtime",
-        "@tla_apalache//:contents",
+        "@tla_apalache//:bin/apalache-mc",
     ],
     env = {
         "JAVABASE": "$(JAVABASE)",
+        "TLA_APALACHE_BIN": "$(rootpath @tla_apalache//:bin/apalache-mc)",
+        "TLA_MODULES": "$(locations :tla_models)",
     },
     proc_macro_deps = [":proc_macros"],
     toolchains = ["@bazel_tools//tools/jdk:current_java_runtime"],
@@ -44,9 +46,11 @@ rust_test(
     ],
 )
 
+# all TLA mdels
+# NOTE: the test runner assumes unique basenames
 filegroup(
     name = "tla_models",
-    srcs = glob(["tla/**/*.tla"]),
+    srcs = glob(["tla/*.tla"]),
 )
 
 rust_proc_macro(
