--- a/.github/workflows/pocket-ic-build-windows.yml
+++ b/.github/workflows/pocket-ic-build-windows.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
     paths:
       - packages/pocket-ic/**
+  push:
+    branches:
+      - master
 # runs for the same workflow are cancelled on PRs
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref }}
