--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -59,8 +59,10 @@ jobs:
         shell: bash
         run: |
           set -xeuo pipefail
-          if [[ "${{ github.event_name }}" == 'merge_group' ]]; then
-            echo "BAZEL_EXTRA_ARGS=--test_timeout_filters=short,moderate --flaky_test_attempts=3" >> $GITHUB_ENV
+          if [[ "${{ github.event_name }}" == 'pull_request' ]]; then
+            echo "BAZEL_EXTRA_ARGS=--keep_going --test_tag_filters=-long_test" >> $GITHUB_ENV
+          elif [[ "${{ github.event_name }}" == 'merge_group' ]]; then
+            echo "BAZEL_EXTRA_ARGS=--test_timeout_filters=short,moderate --flaky_test_attempts=3 --test_tag_filters=-long_test" >> $GITHUB_ENV
           elif [[ $BRANCH_NAME =~ ^hotfix-.* ]]; then
             echo "BAZEL_EXTRA_ARGS=--test_timeout_filters=short,moderate" >> $GITHUB_ENV
           else
