fix(IDX): Use env vars for wasm paths
This changes a couple bazel dependencies on the BTC & II canisters to
use paths read from environment variables instead of making assumptions
about paths used by Bazel (`external/foo`).

--- a/rs/tests/financial_integrations/BUILD.bazel
+++ b/rs/tests/financial_integrations/BUILD.bazel
@@ -16,6 +16,9 @@ LEDGER_CANISTER_RUNTIME_DEPS = [
 
 system_test_nns(
     name = "btc_get_balance_test",
+    env = {
+        "BTC_WASM_PATH": "$(rootpath @btc_canister//file)",
+    },
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
