--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -59,14 +59,19 @@ jobs:
         shell: bash
         run: |
           set -xeuo pipefail
+
+          # Skip long running tests (> 5 minutes) on PRs:
+          TEST_TAG_FILTERS=""
           if [[ "${{ github.event_name }}" == 'pull_request' ]]; then
-            echo "BAZEL_EXTRA_ARGS=--keep_going --test_tag_filters=-long_test" >> $GITHUB_ENV
-          elif [[ "${{ github.event_name }}" == 'merge_group' ]]; then
+            TEST_TAG_FILTERS="--test_tag_filters=-long_test"
+          fi
+
+          if [[ "${{ github.event_name }}" == 'merge_group' ]]; then
             echo "BAZEL_EXTRA_ARGS=--test_timeout_filters=short,moderate --flaky_test_attempts=3 --test_tag_filters=-long_test" >> $GITHUB_ENV
           elif [[ $BRANCH_NAME =~ ^hotfix-.* ]]; then
-            echo "BAZEL_EXTRA_ARGS=--test_timeout_filters=short,moderate" >> $GITHUB_ENV
+            echo "BAZEL_EXTRA_ARGS=$TEST_TAG_FILTERS --test_timeout_filters=short,moderate" >> $GITHUB_ENV
           else
-            echo "BAZEL_EXTRA_ARGS=--keep_going" >> $GITHUB_ENV
+            echo "BAZEL_EXTRA_ARGS=$TEST_TAG_FILTERS --keep_going" >> $GITHUB_ENV
           fi
       - name: Run Bazel Test All
         id: bazel-test-all
